# lwj-app

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: release.yaml
src/: app.tsx  episode-preview.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: episode-preview.module.css
src/helpers/: mock-data.ts  notification.ts
